--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <section>
         <h1>Calculadora</h1>
         <div id="operadores">
-            <div id="operador-passado">33</div>
-            <div id="operador-atual">44</div>
+            <div id="operador-passado"></div>
+            <div id="operador-atual"></div>
         </div>
          <div class="container">
-            <button class="simbol">%</button>
-            <button class="simbol">AC</button>
+            <button class="simbol">C</button>
+            <button class="simbol">CE</button>
             <button class="simbol">⌫</button>
             <button class="simbol">÷</button>
             <button class="number">9</button>
             <button class="number">8</button>
             <button class="number">7</button>
-            <button class="simbol">*</button>
+            <button class="simbol">×</button>
             <button class="number">6</button>
             <button class="number">5</button>
             <button class="number">4</button>
@@ -35,6 +35,7 @@
             <button class="number">,</button>
             <button id="resultado">=</button>
         </div>
+        <p>&copy; Fausto Renato Rojas Silva</p>
     </section>
     <script src="script.js"></script>
 </body>
